--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -5,6 +5,8 @@
 
 :root {
   --primary: #fe2c55;
+  --black: #000;
+  --text-color: #333;
 
   //DefaultLayout
   --default-layout-header-height: 60px;
@@ -27,4 +29,15 @@ body {
   font-size: 1.6rem;
   line-height: 1.5;
   text-rendering: optimizeSpeed;
+}
+
+button, input {
+  border: none;
+  outline: none;
+}
+
+a[href] {
+  color: var(--text-color);
+  text-decoration: none;
+
 }
