--- a/src/components/Layout/DefaultLayout/Header/Header.module.scss
+++ b/src/components/Layout/DefaultLayout/Header/Header.module.scss
@@ -9,4 +9,83 @@
 .inner {
   height: 100%;
   width: var(--default-layout-width,1150px);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.logo {
+
+}
+
+.search {
+  width: 361px;
+  height: 46px;
+  padding-left:  16px;
+  background-color: rgba(22, 24, 35, 0.06);
+  border-radius: 92px;
+  display: flex;
+  position: relative;
+  border: 1.5px solid transparent;
+
+
+  input {
+    flex: 1;
+    height: 100%;
+    font-size: 1.6rem;
+    color: var(--black);
+    background-color: transparent;
+    caret-color: var(--primary);
+   
+  }
+
+  input:not(:placeholder-shown) ~ .search-btn {
+    color: rgba(22, 24, 35, 0.75);
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    background: rgba(22, 24, 35, 0.12);
+    width: 1px;
+    height: 28px;
+    top: 9px;
+    right: 52px;
+  }
+
+  &:focus-within {
+    border-color:  rgba(22, 24, 35, 0.2);
+
+  }
+}
+
+.clear, .loading {
+  position: absolute;
+  right: 66px;
+  top: 50%;
+  transform: translateY(-50%);
+  color: rgba(22, 24, 35, 0.34);
+}
+
+.loading {
+
+}
+
+.search-btn {
+  width: 52px;
+  height: 100%;
+  border-bottom-right-radius: 92px;
+  border-top-right-radius: 92px;
+  font-size: 1.8rem;
+  color: rgba(22, 24, 35, 0.34);
+
+  &:hover {
+    background: rgba(22, 24, 35, 0.03);
+    cursor: pointer;
+  }
+
+  &:active {
+    
+    background-color: rgba(22, 24, 35, 0.06); ;
+  }
 }
