--- a/src/components/Layout/DefaultLayout/Header/Header.module.scss
+++ b/src/components/Layout/DefaultLayout/Header/Header.module.scss
@@ -18,8 +18,19 @@
 
 }
 
-.search {
+.search, .search-result {
   width: 361px;
+
+}
+
+.search-title {
+  padding: 5px 12px;
+  font-size: 1.4rem;
+  font-weight: 600;
+  color: rgba(22, 24, 35, 0.5);
+}
+
+.search {
   height: 46px;
   padding-left:  16px;
   background-color: rgba(22, 24, 35, 0.06);
@@ -57,6 +68,10 @@
     border-color:  rgba(22, 24, 35, 0.2);
 
   }
+}
+
+.search-result {
+  
 }
 
 .clear, .loading {
