--- a/src/components/Layout/DefaultLayout/Header/Header.module.scss
+++ b/src/components/Layout/DefaultLayout/Header/Header.module.scss
@@ -1,113 +1,109 @@
 .wrapper {
-  width: 100%;
-  height: var(--default-layout-header-height,60px);
-  box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
-  display: flex;
-  justify-content: center;
+   width: 100%;
+   height: var(--default-layout-header-height, 60px);
+   box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
+   display: flex;
+   justify-content: center;
 }
 
 .inner {
-  height: 100%;
-  width: var(--default-layout-width,1150px);
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+   height: 100%;
+   width: var(--default-layout-width, 1150px);
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+   padding: 0 24px;
 }
 
 .logo {
-
 }
 
-.search, .search-result {
-  width: 361px;
-
+.search,
+.search-result {
+   width: 361px;
 }
 
 .search-title {
-  padding: 5px 12px;
-  font-size: 1.4rem;
-  font-weight: 600;
-  color: rgba(22, 24, 35, 0.5);
+   padding: 5px 12px;
+   font-size: 1.4rem;
+   font-weight: 600;
+   color: rgba(22, 24, 35, 0.5);
 }
 
 .search {
-  height: 46px;
-  padding-left:  16px;
-  background-color: rgba(22, 24, 35, 0.06);
-  border-radius: 92px;
-  display: flex;
-  position: relative;
-  border: 1.5px solid transparent;
+   height: 46px;
+   padding-left: 16px;
+   background-color: rgba(22, 24, 35, 0.06);
+   border-radius: 92px;
+   display: flex;
+   position: relative;
+   border: 1.5px solid transparent;
 
+   input {
+      flex: 1;
+      height: 100%;
+      font-size: 1.6rem;
+      color: var(--black);
+      background-color: transparent;
+      caret-color: var(--primary);
+   }
 
-  input {
-    flex: 1;
-    height: 100%;
-    font-size: 1.6rem;
-    color: var(--black);
-    background-color: transparent;
-    caret-color: var(--primary);
-   
-  }
+   input:not(:placeholder-shown) ~ .search-btn {
+      color: rgba(22, 24, 35, 0.75);
+   }
 
-  input:not(:placeholder-shown) ~ .search-btn {
-    color: rgba(22, 24, 35, 0.75);
-  }
+   &::after {
+      content: "";
+      position: absolute;
+      background: rgba(22, 24, 35, 0.12);
+      width: 1px;
+      height: 28px;
+      top: 9px;
+      right: 52px;
+   }
 
-  &::after {
-    content: "";
-    position: absolute;
-    background: rgba(22, 24, 35, 0.12);
-    width: 1px;
-    height: 28px;
-    top: 9px;
-    right: 52px;
-  }
-
-  &:focus-within {
-    border-color:  rgba(22, 24, 35, 0.2);
-
-  }
+   &:focus-within {
+      border-color: rgba(22, 24, 35, 0.2);
+   }
 }
 
 .search-result {
-  
 }
 
-.clear, .loading {
-  position: absolute;
-  right: 66px;
-  top: 50%;
-  transform: translateY(-50%);
-  color: rgba(22, 24, 35, 0.34);
+.clear,
+.loading {
+   position: absolute;
+   right: 66px;
+   top: 50%;
+   transform: translateY(-50%);
+   color: rgba(22, 24, 35, 0.34);
 }
 
 .loading {
-
 }
 
 .search-btn {
-  width: 52px;
-  height: 100%;
-  border-bottom-right-radius: 92px;
-  border-top-right-radius: 92px;
-  font-size: 1.8rem;
-  color: rgba(22, 24, 35, 0.34);
+   width: 52px;
+   height: 100%;
+   border-bottom-right-radius: 92px;
+   border-top-right-radius: 92px;
+   font-size: 1.8rem;
+   color: rgba(22, 24, 35, 0.34);
 
-  &:hover {
-    background: rgba(22, 24, 35, 0.03);
-    cursor: pointer;
-  }
+   &:hover {
+      background: rgba(22, 24, 35, 0.03);
+      cursor: pointer;
+   }
 
-  &:active {
-    
-    background-color: rgba(22, 24, 35, 0.06); ;
-  }
+   &:active {
+      background-color: rgba(22, 24, 35, 0.06);
+   }
 }
 
 .more-btn {
-  font-size: 2rem;
-  margin-left: 28px;
-  padding: 4px 8px;
-  background-color: transparent;
+   font-size: 2rem;
+   margin-left: 28px;
+   padding: 4px 8px;
+   background-color: transparent;
+   cursor: pointer;
 }
