--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -11,6 +11,8 @@
   background-color: var(--white);
   border: 1px solid transparent;
   user-select: none;
+  font-family: 'ProximaNova', sans-serif;
+
 
   + .wrapper {
       margin-left: 8px;
