--- a/src/components/Layout/DefaultLayout/Header/Header.module.scss
+++ b/src/components/Layout/DefaultLayout/Header/Header.module.scss
@@ -15,6 +15,9 @@
    padding: 0 24px;
 }
 
+.logo-link {
+   display: flex;
+}
 
 
 .search,
@@ -146,6 +149,6 @@
    font-size: 1.4rem;
    font-weight: 600;
    color: var(--white);
-   font-family: 'ProximaNova', sans-serif;
+   font-family: var(--font-family);
    background-color: var(--primary);
 }
