--- a/src/components/Layout/Search/Search.module.scss
+++ b/src/components/Layout/Search/Search.module.scss
@@ -30,6 +30,7 @@
      color: var(--black);
      background-color: transparent;
      caret-color: var(--primary);
+     font-family: var(--font-family);
   }
 
   input:not(:placeholder-shown) ~ .search-btn {
