--- a/src/components/Layout/DefaultLayout/DefaultLayout.module.scss
+++ b/src/components/Layout/DefaultLayout/DefaultLayout.module.scss
@@ -8,6 +8,7 @@
   width: var(--default-layout-width,1150px);
   display: flex;
   padding: 0 24px;
+  margin-top: var(--default-layout-header-height);
   
 }
 
