--- a/src/components/Layout/DefaultLayout/Header/Header.module.scss
+++ b/src/components/Layout/DefaultLayout/Header/Header.module.scss
@@ -4,6 +4,11 @@
    box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
    display: flex;
    justify-content: center;
+   position: fixed;
+   top:0px;
+   left: 0px;
+   background-color: var(--white);
+   z-index: 10;
 }
 
 .inner {
