--- a/src/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Popper/Menu/Menu.module.scss
@@ -14,6 +14,10 @@
   
 }
 
+.menu-body {
+  overflow-y: auto;
+}
+
 
 // Menu items
 .menu-item {
@@ -37,6 +41,7 @@
   position: relative;
   height: 50px;
   margin-top: -8px;
+  flex-shrink: 0;
 }
 
 .back-btn {
